--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ navigationUiKtx = "2.9.0-alpha06"
 navigationCompose = "2.9.0-alpha06"
 hiltAndroid = "2.55"
 hiltCompiler = "2.55"
+hilt = "2.50"
 kapt = "2.1.10"
 safeargs = "2.8.7"
 [libraries]
@@ -52,5 +53,6 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kapt" }
 androidx-navigation-safeargs = { id = "androidx.navigation.safeargs.kotlin", version.ref = "safeargs" }
+hilt-android = { id = "com.google.dagger.hilt.android", version = "2.50" }
 
 
